OAR CHANGELOG
=============

version next:
-------------
  - Fix default admission rules: case unsensitive check for properties used in 
    oarsub
  - Add new oaradmin subcommand : oaradmin conf. Useful to edit conf files and 
    keep changes in a Subversion repository.

version 2.3.2:
--------------
  - Change scheduler timeout implementation to schedule the maximum of jobs.
  - Bug #5879: do not show initial_request in oarstat when it is not a job of
    the user who launched the oarstat command (oar or root).
  - Add a --event option to oarnodes and oarstat to display events recorded for
    a job or node
  - Display reserved resources for a validated waiting reservation, with a hint
    in their state
  - Fix oarproperty: property names are lowercase
  - Fix OAR_JOB_PROPERTIES_FILE: do not display system properties
  - Add a new user command: oarprint which allow to pretty print resource 
    properties of a job
  - Debug temporary job UID feature
  - Add 'kill -9' on subprocesses that reached a timeout (avoid Perl to
    wait something)
  - desktop computing feature is now available again. (ex: oarsub -t
    desktop_computing date)
  - Add versioning feature for admission rules with Subversion

version 2.3.1:
--------------
  - Add new oarmonitor command. This will permit to monitor OAR jobs on compute
    nodes.
  - Remove sudo dependency and replace it by the commands "oardo" and
    "oardodo".
  - Add possibility to create a temporary user for each jobs on compute nodes.
    So you can perform very strong restrictions for each job (ex: bandwidth
    restrictions with iptable, memory management, ... everything that can be
    handled with a user id)
  - Debian packaging: Run OAR specific sshd with root privileges (under heavy
    load, kernel may be more responsive for root processes...)
  - Remove ALLOWED_NETWORKS tag in oar.conf (added more complexeity than
    resolving problems)